# interview-assignments

./: README.rst
20251001/: README.md  pyproject.toml
20251001/src/webapp/app/: db.sqlite3
20251001/src/webapp/app/assignment/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
20251001/src/webapp/app/assignment/fixtures/: assignment.json
20251001/src/webapp/app/assignment/migrations/: 0001_initial.py  0002_alter_product_tags.py
20251001/src/webapp/app/assignment/templates/assignment/: include_product.html  index.html  products.html
20251001/src/webapp/app/project/: settings.py  urls.py
20251017/: carshare_booking.py  sql_max_value.py
